# search-backend

./: .env.example  .gitignore  API_DOCUMENTATION.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  GITHUB_PAGES_SETUP.md  LICENSE  README.md  tests.toml
.github/: README.md
.github/workflows/: build.yml  lint.yml  main_dachshund-api.yml  rustdoc.yml  test.yml
src/: config.rs  indexer.rs  lib.rs  main.rs  search.rs  storage.rs
