[package]
name = "search-engine-backend"
version = "0.1.0"
edition = "2021"
description = "A Rust search engine backend using Azure Cognitive Search and Cosmos DB"
license = "MIT"

[[bin]]
name = "search-backend"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures-util = "0.3"

# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Azure SDK components
azure_core = "0.19"
azure_identity = "0.19"
azure_storage = "0.19"
azure_storage_blobs = "0.19"
azure_data_cosmos = { version = "0.23", features = ["key_auth"] }

# Database and search
# Using official Azure Cosmos DB SDK

# Configuration and environment
dotenv = "0.15"
clap = { version = "4.4", features = ["derive"] }

# Error handling and logging
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# URL and HTML parsing for indexing
url = "2.4"
scraper = "0.18"
robots_txt = "0.7"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"

# Cryptography for Azure Cosmos DB authentication (temporary, will be replaced with official SDK)
hmac = "0.12"
sha2 = "0.10"
base64 = "0.21"